deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nextjs-service
  labels:
    name: ingress-nextjs-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
   ingressClassName: nginx
   rules:
     - host: "*.next-kube.com"
       http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: nextjs-kube-service
                port:
                  number: 3000
